# flowdyn

./: .coveragerc  .gitignore  .mailmap  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  __init__.py  clean-repo.sh  field.py  integration.py  make_results.sh  mesh.py  mkdocs.yml  model.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py  tox.ini  xnum.py
.github/workflows/: codeql.yml  publish-master.yml  python-package.yml
async_validation/burgersinv/: burgers-inv.py
async_validation/burgersinv/precision/: test_burgersinv_order.py
async_validation/convection/: convection.py
async_validation/convection/plot_order_conv_extrapol3_rk4/: ploterror_conv_extrapol3_rk4.tex
async_validation/sod-euler/: sod-euler.py
class-convection/: class-compare.py  class-first.py  class-spectra.py
docs/: about.md  examples.md  index.md  requirements.txt
docs/coderef/: flowdyn.monitors.md
docs/dev/: flowdyn_structure.md  how_to_add_model.md
docs/examples/: acoustics-impedance.ipynb  euler-convergence.ipynb  euler-nozzle.ipynb  euler-rayleigh-flow.ipynb
docs/stylesheets/: extra.css
docs/userguide/: examples.md  models.md  num.md  start.md
docs/userguide/models/: burgers.md  convection.md  euler.md  shallowwater.md
examples/: test.py
flowdyn/: __init__.py  _data.py  field.py  integration.py  mesh.py  mesh2d.py  meshbase.py  modeldisc.py  monitors.py  xnum.py
flowdyn/modelphy/: base.py  burgers.py  convection.py  euler.py  shallowwater.py
flowdyn/solution/: euler_nozzle.py  euler_riemann.py
lessons/: class-compare-mesh.py  class-compare.py  class-first.py  class-spectra.py  convection-spectra.ipynb  custom.css  euler-spectra-widget.ipynb  euler-spectra.ipynb  remove_output.py
lessons/euler-nozzle/: nozzle-0-duct.ipynb  nozzle-1-rayleigh.ipynb  nozzle-2-convdiv.ipynb
lessons/euler-riemann/: riemann-0-acoustic-pulse.ipynb  riemann-1-ramp.ipynb
lessons/euler-shocktube/: pyfvm-sod-compare.ipynb  sod.py
lessons/scalar-conv/: class-compare-mesh.py  class-compare.py  class-first.py  class-spectra.py  pyfvm-sca0-evo.ipynb  pyfvm-sca1-compare.ipynb  pyfvm-sca2-order-stud.ipynb  pyfvm-sca2-order.ipynb  pyfvm-sca3-Richardson.ipynb  pyfvm-sca4-spectra-stud.ipynb  pyfvm-sca4-spectra.ipynb
pyfvm/: __init__.py  field.py  integration.py  mesh.py  mesh2d.py  meshbase.py  model.py  modeldisc.py  xnum.py
pyfvm/modelphy/: base.py  burgers.py  convection.py  euler.py
pyfvm/solution/: euler_nozzle.py  euler_riemann.py
scripts/: clean-repo.sh  remove_output.py
tests/: test_0_pytest.py  test_1_field.py  test_1_integration.py  test_1_mesh.py  test_1_monitor.py  test_1_xnum.py  test_2_model_burgers.py  test_2_model_conv.py  test_2_model_euler.py  test_2_model_euler2d.py  test_3_euler_solution.py  test_euler_solution.py  test_model_burgers.py  test_model_conv.py  test_model_euler.py  test_model_euler2d.py  test_model_shallowwater.py  test_pytest.py
validation/: burgers-inv.py  conv-flux.py  conv-mesh.py  conv-time.py  euler-channel-convergence.py  euler-channel.py  euler-sod.py  integrator-spectra.py  sod-euler-short.py  sod-euler.py
validation/async/burgersinv/: burgers-inv.py
validation/async/sod-euler/: sod-euler.py
validation/dev/: decorator-inheritance.py
validation/fvm.2d/: euler2d-densitypulse.py  euler2d-isentropicvortex.py
validation/model.burgers/: burgers-inv.py
validation/model.conv/: conv-flux.py  conv-mesh.py  conv-restart.py  conv-time-rk.py  conv-time.py
validation/model.euler/: acoustics-bcoutlet.py  acoustics-bcsym.py  acoustics-interface.py  euler-channel.py  euler-nozzle-convdiv-npr.py  euler-nozzle-restart.py  euler-pulse-acoustic.py  euler-pulse-density.py  euler-rayleigh.py  euler-shock-steady.py  euler-sod.py
validation/model.shallowwater/: shallowwater-box.py
