[tool.poetry]
name = "flowdyn"
version = "1.1.2"
description = "Model of discretization of hyperbolic model, base is Finite Volume method"
authors = ["j.gressier <jeremie.gressier@isae-supaero.fr>"]
license = "MIT"
repository = "https://github.com/jgressier/flowdyn"
documentation = "https://flowdyn.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules" ]
exclude = [ "examples", "lessons" ]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.15"
matplotlib = { version="^3.3", optional = true }
aerokit = { version="^1.0", optional = true }

[tool.poetry.dev-dependencies]
matplotlib = "^3.3"
aerokit = "^1.0.1"
pytest = "^6.0"
pytest-cov = "^2.11.1"
mkdocs = "^1.1"
mkdocs-material = "^6.2.5"
mkdocs-jupyter = "^0.15"
mkdocs-include-markdown-plugin = ""
mkdocs-exclude = ""
mkdocstrings = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov -v"
testpaths = [
    "tests"
]
